# queenright-queenless-analysis

./: .Rprofile  .flake8  .gitignore  .gitmodules  .isort.cfg  .lintr  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  LICENSE.md  README.md  SuppFig11.R  TODO  pyproject.toml  reviews.md  tox.ini
data/: 2023_macros_qr_v_ql_wings.csv  RooibosTea_QL_1216_1646_Bout_AllHours.gml  RooibosTea_QL_1216_1646_Time_AllDays.gml  RooibosTea_QL_1216_1646_Time_Day4.gml  RooibosTea_QR_1216_1646_Bout_AllHours.gml  RooibosTea_QR_1216_1646_Time_Day4.gml  RooibosTea_QR_1216_1646_Time_DayOnly.gml  TotalNWP.csv  TotalNWP_Day.csv  TotalNWP_Locked.csv  bds_pooled.csv  comprehensive_summary_table.csv  least_interacting_nodes.csv  lmmQRsummary.csv  lmmQueensummary.csv  lmminfsummary.csv  lmmnwpsummary.csv  network_parameters.csv  wing_morphometrics.csv
data_processing/: batch_filterinterp.sh  filterinterp.py  network_params.py  plot_directed_edgelist.py  plot_network_no_filtering.py
meta/: experimental_tag_list.csv
results/: clustered_adjacency_matrix_20221123_1543_AmericanoLatte_QR.csv  clustered_adjacency_matrix_20221209_1613_QL.csv  clustered_adjacency_matrix_20221209_1613_QR.csv  clustered_adjacency_matrix_20230213_1745_AlmdudlerGspritzt_C0.csv  clustered_adjacency_matrix_20230213_1745_AlmdudlerGspritzt_C1.csv  clustered_adjacency_matrix_MexHotChoc_QL_1216_1646.csv  clustered_adjacency_matrix_MexHotChoc_QR_1216_1646.csv  clustered_adjacency_matrix_RooibosTea_QL_1216_1646.csv  comprehensive_summary_table_inf.csv  comprehensive_summary_table_nwp.csv  queen_model_summary_table.csv  (+4 more)
(+165 files in other folders)
